<resources>
    <string name="app_name">TimeMap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_day">Today events</string>
    <string name="menu_week">Weekly view</string>
    <string name="menu_calendar">Calendar view</string>
    <string name="menu_info">Info</string>
    <string name="menu_event_list">All events</string>
    <string name="menu_settings">Settings</string>

    <!-- Strings para vista de informacion -->
    <string name="guille_name">Guillermo de Carlos</string>
    <string name="martin_name">Martín Ramonda</string>
    <string name="jose_name">José García</string>
    <string name="manuel_name">Manuel Martín</string>
    <string name="subtitle_string">Aplicación desarrollada por:</string>
    <string name="title_string">Información</string>

    <string name="sign_string">Somos programadores independientes. Dependemos de las donaciones para mantener la aplicación</string>

</resources>