<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_day"
            style="@style/AppTheme.NavItem"
            android:icon="@drawable/ic_menu_day"
            android:textColor="@color/beige"
            android:title="@string/menu_day" />
        <item
            android:id="@+id/nav_week"
            style="@style/AppTheme.NavItem"
            android:icon="@drawable/ic_menu_week"
            android:textColor="@color/beige"
            android:title="@string/menu_week" />
        <item
            android:id="@+id/nav_calendar"
            style="@style/AppTheme.NavItem"
            android:icon="@drawable/ic_menu_calendar"
            android:textColor="@color/beige"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_events"
            style="@style/AppTheme.NavItem"
            android:icon="@drawable/ic_menu_list"
            android:textColor="@color/beige"
            android:title="@string/menu_event_list" />
        <item
            android:id="@+id/nav_information"
            style="@style/AppTheme.NavItem"
            android:icon="@drawable/ic_menu_info"
            android:textColor="@color/beige"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/settings"
            style="@style/AppTheme.NavItem"
            android:icon="@android:drawable/ic_menu_manage"
            android:textColor="@color/beige"
            android:title="@string/menu_settings" />
    </group>
</menu>