<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_day">

    <fragment
        android:id="@+id/nav_day"
        android:name="com.example.timemap.ui.currentDay.DayFragment"
        android:label="@string/menu_day"
        tools:layout="@layout/fragment_day" />

    <fragment
        android:id="@+id/nav_week"
        android:name="com.example.timemap.ui.currentWeek.WeekFragment"
        android:label="@string/menu_week"
        tools:layout="@layout/fragment_week" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.timemap.ui.currentCalendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.timemap.ui.eventList.EventListFragment"
        android:label="Events"
        tools:layout="@layout/fragment_event_list" />

    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.timemap.ui.information.InfoFragment"
        android:label="Information"
        tools:layout="@layout/fragment_slideshow" />
</navigation>